[package]
name = "coinbro"
version = "0.1.0"
authors = ["Jan <goarano@gmail.com>"]
edition = "2018"

[dependencies]
clap = "^2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = "~0.9"
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"
prettytable-rs = "~0.8.0"
strum = "~0.15"
strum_macros = "~0.15"
itertools = "~0.8"
error-chain = "~0.12"
colored = "1.8"
log = { version = "~0.4", features = ["std", "serde"] }
